# nuitrack_ros

./: LICENSE  README.md
nuitrack_core/: CMakeLists.txt  README.md  nodelet_nuitrack_core.xml  package.xml
nuitrack_core/src/: nuitrack_core.cpp
nuitrack_msgs/: CMakeLists.txt  package.xml
nuitrack_msgs/msg/: EventUserUpdate.msg  SkeletonData.msg  SkeletonDataArray.msg  UserData.msg  UserDataArray.msg
nuitrack_ros/: CMakeLists.txt  package.xml
nuitrack_ros/launch/: nuitrack.launch
nuitrack_user_viewer/: CMakeLists.txt  README.md  package.xml
nuitrack_user_viewer/src/: viewer_node.py
