<?xml version="1.0"?>
<package format="2">
  <name>nuitrack_msgs</name>
  <version>0.0.0</version>
  <description>The nuitrack_msgs package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/byeongkyu/nuitrack_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
