<?xml version="1.0"?>
<package format="2">
  <name>nuitrack_user_viewer</name>
  <version>0.0.0</version>
  <description>The nuitrack_user_viewer package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/byeongkyu/nuitrack_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <depend>nuitrack_msgs</depend>
  <depend>nuitrack_core</depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
